--- a/res/css/style.css
+++ b/res/css/style.css
@@ -89,10 +89,14 @@ form{
     text-align: center;
 } */
 #cancelbtn{
+
+    margin-left: 3px;
     box-sizing:border-box;
-    margin-bottom:2px;
-    white-space: break-spaces;
-    font-size: 0.8em;
+    /* margin-bottom:2px; */
+    /* white-space: break-spaces; */
+    font-size: 1.2em;
+    
+
 }
 #updateCra{
     /* position:absolute; */
@@ -117,47 +121,19 @@ form{
 
     width: 100%;
    }
-      /* padding-bottom: 20px;
-      box-sizing: content-box;
-      display: flex; 
-      flex-direction: column;
-      background-color: maroon;
-      justify-content: center; 
-      margin-left: 10px;
-  } */
-  /* .reduce{
-      
-  display: flex;
-  width: fit-content;
-   
-  } */
-  /* #choixBox{
-
-      padding:10px;
-      display: flex;
-      flex-direction: column;
-      width: 70%;
-  }  */
- /*  #choixBox, input  {
-    font-size: 12px;
-    color: black;
-    background-color: rgb(224, 220, 220);
-    
-    
-  } */
+  
   
   select:focus-within {
     background: rgb(131, 131, 127);
     color: black;
   }
-   .row {
-    width:120%;
-   }
+ 
  
 #player-select{
 
     border: solid 1px rgb(32, 2, 2);
-    font-size: 18px;
+    font-size: 25px;
+
     font-weight: bolder;
     padding: 8px;
     /* text-align: center; */
